= v3.1.1

* Fixed bug with default settings not loading when heroku_plus.yml settings file is missing.

= v3.1.0

* Fixed description display with command options.
* Fixed the Ruby version requirement (namely Ruby 1.8.7) so that it is no longer required.
* Added account switching warnings - You can suppress these warnings via the heroku_plus.yml settings (see README).
* Added printing of current account information after switching modes.
* Added printing of current account information after switching accounts.
* Added graceful capture for bad URI exception when attempting to import a backup database that doesn't exist.
* Moved mode management to a first level option (i.e. mode, -m). The original migrate (-m) option is now a sub-option of db.
* Added the ability to pass a new mode to the mode (-m) option. Optional, of course. Defaults to listing available modes.
* Cleaned up sub-option descriptions.

= v3.0.0

* Refactored the gem to use Thor instead of OptionParser for command line option parsing.
* All account specific commands have been become options of the "account" option. Type "hp help account" for usage.
* All database specific commands have been become options of "db" option. Type "hp help db" for usage.

= v2.0.0

* Fixed bug with not being able to wrap complex commands in quotes for passing to Heroku (i.e. -p).
* Fixed version requirements for Heroku 1.x.x gem.
* Added the -c, --console option for opening the remote console.
* Added the -r, --restart option for restarting the remote server.
* Added the -M, --mode option for changing mode of current app.
* Added the -I, --import option for importing the latest remote data into local database.
* Renamed the -b option to -B.
* Renamed the -d option to -D.
* Renamed the key "current_mode" to "mode" for the heroku_plus.yml settings file.

= v1.3.0

* Updated the README.
* Switched to Bundler for building/packing of gem.
* Fixed stack dump when obtaining git config app information.